--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "ant-design-vue": "^1.7.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "firebaseui": "^4.7.1",
     "scss": "^0.2.4",
     "swiper": "^6.4.5",
     "uimini": "^1.1.3",
     "unirest": "^0.6.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "vuikit": "^0.8.10"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
