--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ant-design-vue": "^1.7.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.7",
     "firebaseui": "^4.7.1",
     "scss": "^0.2.4",
     "swiper": "^6.4.5",
